<resources>
    <string name="app_name">Socks</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="title_activity_forgot">ForgotActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password_reset">Password Reset</string>
    <string name="send_instruction">send_instruction</string>
    <string name="account_email">account_email</string>

    <string name="register_lower">register_lower</string>
    <string name="password_with_note">password_with_note</string>
    <string name="confirm_password">confirm_password</string>
    <string name="language">language</string>
    <string name="english">english</string>
    <string name="agree_eula">EULA</string>
    <string name="age_info">Age</string>
    <string name="confirm_email">confirm_email</string>
    <string name="confirmation">confirmation</string>
    <string name="confirmation_note">confirmation_note</string>
    <string name="next_step">next_step</string>
    <string name="first_name">first_name</string>
    <string name="last_name">last_name</string>
    <string name="email">email</string>

    <string name="logo_exp"> Socks logo</string>
    <string name="socks">Socks</string>
    <string name="that">That count your steps</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_boarding">Socks</string>

    <string name="action_help">Help</string>
    <string name="action_about">About</string>

</resources>
